--- a/plug-datepicker/index.html
+++ b/plug-datepicker/index.html
@@ -4,57 +4,29 @@
 	<meta charset="UTF-8">
 	<title>plug-datepicker</title>
 	<link rel="stylesheet" href="css/index.css">
+	<style>
+		.datepicker {
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			padding: 5px;
+			height: 24px;
+			line-height: 24px;
+			width: 250px;
+		}
+		.datepicker:focus{
+			outline: 0 none;
+			border: 1px solid #1abc9c;
+		}
+	</style>
 </head>
 <body>
-	 <div class="ui-datepicker-wrapper">
-		<!--<div class="ui-datepicker-header">
-			<a href="javascript:;" class="ui-datepicker-btn ui-prev">&lt;</a>
-			<span class="ui-datepicker-curr-month">2017-10</span>
-			<a href="javascript:;" class="ui-datepicker-btn ui-next">&gt;</a>
-		</div>
-		<div class="ui-datepicker-body">
-			<table>
-				<thead>
-					<tr>
-						<th>一</th>
-						<th>二</th>
-						<th>三</th>
-						<th>四</th>
-						<th>五</th>
-						<th>六</th>
-						<th>日</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>1</td>
-						<td>2</td>
-						<td>3</td>
-						<td>4</td>
-						<td>5</td>
-						<td>6</td>
-						<td>7</td>
-					</tr>
-					<tr>
-						<td>1</td>
-						<td>2</td>
-						<td>3</td>
-						<td>4</td>
-						<td>5</td>
-						<td>6</td>
-						<td>7</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>-->
-	</div>
-
+	<input type="text" class="datepicker">
 	<script type="text/javascript" src="js/index.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript">
 		//var month = datepicker.getMonthData();
 		//console.log(month);
-		datepicker.init(document.querySelector('.ui-datepicker-wrapper'))
+		datepicker.init('.datepicker')
 	</script>
 </body>
 </html>
