十月十八号--上一月下一月切换

--- a/plug-datepicker/index.html
+++ b/plug-datepicker/index.html
@@ -5,6 +5,11 @@
 	<title>plug-datepicker</title>
 	<link rel="stylesheet" href="css/index.css">
 	<style>
+		.datepicker-box {
+			display: block;
+			margin: 0 auto;
+			text-align: center;
+		}
 		.datepicker {
 			border: 1px solid #ccc;
 			border-radius: 4px;
@@ -20,7 +25,9 @@
 	</style>
 </head>
 <body>
-	<input type="text" class="datepicker">
+	<div class="datepicker-box">
+		<input type="text" class="datepicker">
+	</div>
 	<script type="text/javascript" src="js/index.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript">
