--- a/plug-love/index.html
+++ b/plug-love/index.html
@@ -105,10 +105,10 @@ Heart.prototype.draw = function(){
 
 
 function render(a){
-    //requestAnimationFrame(render);
-    setTimeout(function() {
-        render();
-    },50);
+    requestAnimationFrame(render);
+    // setTimeout(function() {
+    //     render();
+    // },50);
     hearts.push(new Heart());
     ctx.clearRect(0,0,ww,wh);
     for (var i = 0; i < hearts.length; i++) {
